@@ -25,10 +25,13 @@ namespace gui
 		IGUIImage(IGUIEnvironment* environment, IGUIElement* parent, s32 id, core::rect<s32> rectangle)
 			: IGUIElement(EGUIET_IMAGE, environment, parent, id, rectangle) {}
 
-		//! Sets an image
+		//! Sets an image texture
 		virtual void setImage(video::ITexture* image) = 0;
 
-		//! Sets the colour of the image
+		//! Gets the image texture
+		virtual video::ITexture* getImage() const = 0;
+
+		//! Sets the color of the image
 		virtual void setColor(video::SColor color) = 0;
 
 		//! Sets if the image should scale to fit the element
@@ -36,6 +39,9 @@ namespace gui
 
 		//! Sets if the image should use its alpha channel to draw itself
 		virtual void setUseAlphaChannel(bool use) = 0;
+
+		//! Gets the color of the image
+		virtual video::SColor getColor() const = 0;
 
 		//! Returns true if the image is scaled to fit, false if not
 		virtual bool isImageScaled() const = 0;
